syntax = "proto3";

package bedrock.types.v1;

option go_package = "github.com/echenim/Bedrock/controlplane/gen/proto/types/v1;typesv1";

// Hash is a 32-byte hash value.
message Hash {
  bytes value = 1;
}

// Address is a 32-byte account or validator identifier.
message Address {
  bytes value = 1;
}

// BlockHeader contains block metadata for consensus.
message BlockHeader {
  uint64 height = 1;
  uint64 round = 2;
  bytes parent_hash = 3;
  bytes state_root = 4;
  bytes tx_root = 5;
  bytes proposer_id = 6;
  uint64 block_time = 7;
  bytes chain_id = 8;
}

// Transaction wraps opaque transaction bytes.
message Transaction {
  bytes data = 1;
}

// Block contains a header and a list of transactions.
message Block {
  BlockHeader header = 1;
  repeated Transaction transactions = 2;
}

// ValidatorInfo describes a validator in the active set.
message ValidatorInfo {
  bytes address = 1;
  bytes public_key = 2;
  uint64 voting_power = 3;
}
